name:               ericbannatyne-ca
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.24

executable site
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , filepath
                  , pandoc
                  , aeson
                  , text
                  , bytestring
  ghc-options:      -threaded
  default-language: Haskell2010
